2016-05-03 Jan Kotanski <jankotan@gmail.com>
	* workaround for closing for nonexisting files
	* tagged as 2.1.3

2016-04-29 Jan Kotanski <jankotan@gmail.com>
	* add man page
	* tagged as 2.1.2

2016-04-11 Jan Kotanski <jankotan@gmail.com>
	* add README.rst to MANIFEST.in
	* tagged as 2.1.1

2016-04-11 Jan Kotanski <jankotan@gmail.com>
	* add sphinx comments
	* add release module
	* tagged as 2.1.0

2016-02-05 Jan Kotanski <jankotan@gmail.com>
	* extend __CLIENT__  group device keyword
	* tagged as 2.0.2

2016-02-05 Jan Kotanski <jankotan@gmail.com>
	* fix __CLIENT__  group device keyword
	* tagged as 2.0.1

2015-10-22 Jan Kotanski <jankotan@gmail.com>
	* adding streaming functions in Streams
	* adding support for external links and datasource links
	* changes for python-pni > 1.0.0
	* tagged as 2.0.0

2015-04-21 Jan Kotanski <jankotan@gmail.com>
	* adding support for tango:// prefix in __CLIENT__ TANGO datasources
	* tagged as 1.8.2

2015-04-07 Jan Kotanski <jankotan@gmail.com>
	* adding closeFile to openFile if OPEN
	* tagged as 1.8.1

2015-03-05 Jan Kotanski <jankotan@gmail.com>
	* adding __CLIENT__ group for  TANGO datasources
	* tagged as 1.8.0

2014-12-18 Jan Kotanski <jankotan@gmail.com>
	* removing shell start-up file
	* tagged as 1.7.3

2014-12-05 Jan Kotanski <jankotan@gmail.com>
	* changing error message for link problems
	* tagged as 1.7.2

2014-12-02 Jan Kotanski <jankotan@gmail.com>
	* enabling use of Tango attrs with different character sizes
	* tagged as 1.7.1

2014-10-29 Jan Kotanski <jankotan@gmail.com>
	* adding common block to PyEval
	* adding datasources into attributes
	* tagged as 1.7.0

2014-10-13 Jan Kotanski <jankotan@gmail.com>
	* making work around for astor strangeness of add_class args
	* cleaning the code
	* tagged as 1.6.3

2014-08-26 Jan Kotanski <jankotan@gmail.com>
	* adding auto growing of fields
	* tagged as 1.6.2

2014-08-21 Jan Kotanski <jankotan@gmail.com>
	* enables saving images and spectra in fields with larger dims